--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -2,15 +2,16 @@ cmake_minimum_required(VERSION 3.4.1)
 
 # stb image library files
 file(GLOB stb-image-lib
-     "./src/main/cpp/src/libs/stb_image.cpp")
+     "./src/main/cpp/src/libs/stb/stb_image.cpp")
 
 # Spine library files
 file(GLOB spine-lib
-     "./src/main/cpp/src/libs/src/*.c")
+     "./src/main/cpp/src/libs/spine/*.c")
 
 # Native Sticker library files
 file(GLOB sticker-lib
      "./src/main/cpp/src/GLES2Utils.cpp"
+     "./src/main/cpp/src/Sticker.cpp"
      "./src/main/cpp/src/StickerWrapper.cpp")
 
 # Sticker library
