--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 
+def platformVersion = 16
+
 android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
@@ -10,10 +12,24 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        ndk {
+            abiFilters 'x86', 'x86_64', 'armeabi', 'armeabi-v7a', 'arm64-v8a'
+        }
+
         externalNativeBuild {
             cmake {
-                cppFlags ""
+                cppFlags '-std=c++11'
+                arguments '-DANDROID_TOOLCHAIN=clang',
+                        "-DANDROID_PLATFORM=android-${platformVersion}",
+                        '-DANDROID_STL=gnustl_static',
+                        '-DANDROID_ARM_NEON=TRUE',
+                        '-DANDROID_CPP_FEATURES=exceptions rtti'
             }
+        }
+        sourceSets.main {
+            jni.srcDirs = []
+            jniLibs.srcDir 'src/main/libs' // This is not necessary unless you have precompiled libraries in your project.
         }
     }
     buildTypes {
